--- a/traficLights/Base.lproj/Main.storyboard
+++ b/traficLights/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina3_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,51 +13,64 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="traficLights" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="28" translatesAutoresizingMaskIntoConstraints="NO" id="rYa-3d-yco">
-                                <rect key="frame" x="132" y="74" width="150" height="506"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="rgC-9P-2FE">
+                                <rect key="frame" x="110" y="14" width="100" height="452"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FjN-Eq-x36">
-                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
-                                        <color key="backgroundColor" systemColor="systemRedColor"/>
-                                    </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HQz-rD-8WD">
-                                        <rect key="frame" x="0.0" y="178" width="150" height="150"/>
-                                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
-                                    </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nVt-8q-6ZL">
-                                        <rect key="frame" x="0.0" y="356" width="150" height="150"/>
-                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
-                                    </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="29" translatesAutoresizingMaskIntoConstraints="NO" id="3R3-Yd-ZVK">
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="358"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FjN-Eq-x36">
+                                                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="100" id="M4P-ib-OfN"/>
+                                                    <constraint firstAttribute="width" constant="100" id="dt1-a4-MYc"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HQz-rD-8WD">
+                                                <rect key="frame" x="0.0" y="129" width="100" height="100"/>
+                                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="100" id="EMC-wm-mJ2"/>
+                                                    <constraint firstAttribute="height" constant="100" id="Nt5-lJ-MBb"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nVt-8q-6ZL">
+                                                <rect key="frame" x="0.0" y="258" width="100" height="100"/>
+                                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="100" id="3x9-sA-UI8"/>
+                                                    <constraint firstAttribute="width" constant="100" id="F84-2p-8Q6"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0V5-Rb-L7Q">
+                                        <rect key="frame" x="0.0" y="408" width="100" height="44"/>
+                                        <color key="backgroundColor" red="0.37258498800000001" green="0.48573081969999998" blue="0.86078917980000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="r7g-vl-cmH"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-UltraLight" family="Avenir Next" pointSize="23"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="START">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="changedCollor" destination="BYZ-38-t0r" eventType="touchUpInside" id="vPM-xw-zdk"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0V5-Rb-L7Q">
-                                <rect key="frame" x="132" y="751" width="150" height="65"/>
-                                <color key="backgroundColor" red="0.37258498800000001" green="0.48573081969999998" blue="0.86078917980000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="Adq-k9-HyA"/>
-                                    <constraint firstAttribute="height" constant="65" id="jGS-pV-5Dr"/>
-                                </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="START">
-                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </buttonConfiguration>
-                                <connections>
-                                    <action selector="changedCollor" destination="BYZ-38-t0r" eventType="touchUpInside" id="vPM-xw-zdk"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="rYa-3d-yco" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="3ND-Yg-R7b"/>
-                            <constraint firstItem="rYa-3d-yco" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="3ji-7Y-VQ8"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0V5-Rb-L7Q" secondAttribute="bottom" constant="46" id="BQK-bC-B96"/>
-                            <constraint firstItem="rYa-3d-yco" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="0.362319" id="Woo-pq-XLq"/>
-                            <constraint firstItem="rYa-3d-yco" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.618582" id="YGC-5a-uem"/>
-                            <constraint firstItem="0V5-Rb-L7Q" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jJr-Xm-Lml"/>
+                            <constraint firstItem="rgC-9P-2FE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Gfq-fY-7o1"/>
+                            <constraint firstItem="rgC-9P-2FE" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="kjr-Ch-MhL"/>
                         </constraints>
                     </view>
                     <connections>
@@ -69,7 +82,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="122.54464285714285"/>
+            <point key="canvasLocation" x="136.875" y="122.5"/>
         </scene>
     </scenes>
     <resources>
